# camkes-vm-examples

apps/Arm/vm_minimal/: CMakeLists.txt  settings.cmake
apps/Arm/vm_minimal/bcm2711/: devices.camkes
apps/Arm/vm_minimal/rpi4/: devices.camkes
apps/Arm/vm_serial_server/: CMakeLists.txt  settings.cmake
apps/Arm/vm_serial_server/qemu-arm-virt/: devices.camkes
apps/Arm/vm_virtio_net/: CMakeLists.txt  settings.cmake
apps/Arm/vm_virtio_net/qemu-arm-virt/: devices.camkes
apps/Arm/vm_virtio_net_2_VMs/: CMakeLists.txt  README.md  settings.cmake  vm_echo_ping.camkes
apps/Arm/vm_virtio_net_2_VMs/overlay_files/network_interfaces/: interfaces_vm1
apps/Arm/vm_virtio_net_2_VMs/qemu-arm-virt/: devices.camkes
